minor change api
